fixed add button alignment

--- a/Frontend/src/app/components/app/crm/customer/customer.component.css
+++ b/Frontend/src/app/components/app/crm/customer/customer.component.css
@@ -20,6 +20,7 @@ button{
 
 #addButton
 {
+  margin-top: 10px;
   background-color: #c2185b;
   border-color: #c2185b;
   border-radius: 50px;
